cabal-version: 3.0
name: wmstats-backend
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Tomas Vestelind
maintainer: tomas.vestelind@gmail.com
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md
common warnings
    ghc-options: -Wall

executable wmstats-backend
    import: warnings
    main-is: Main.hs
    other-modules: Stats
    build-depends: base ^>=4.18.3.0
                 , servant
                 , servant-server
                 , warp
                 , wai
                 , aeson
                 , text
    hs-source-dirs: app
    default-language: GHC2021
